--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+beautifulsoup4==4.9.0
+bs4==0.0.1
 click==7.1.1
 Flask==1.1.2
 Flask-WTF==0.14.3
@@ -6,6 +8,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 selenium==3.141.0
+soupsieve==2.0
 urllib3==1.25.9
 Werkzeug==1.0.1
 WTForms==2.3.1
